--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,9 @@ dependencies:
   equatable: ^2.0.5
   hydrated_bloc: ^9.1.2
   path_provider: ^2.1.1
+  geolocator: ^10.1.0
+  weather: ^3.1.1
+  intl: ^0.18.1
 
 dev_dependencies:
   flutter_test:
