--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,7 @@ dependencies:
   geolocator: ^10.1.0
   weather: ^3.1.1
   intl: ^0.18.1
+  permission_handler: ^11.0.1
 
 dev_dependencies:
   flutter_test:
